force-app/main/default/objects/I_RM_Affiliation__c/I_RM_Affiliation__c.object-meta.xml
<CustomObject>
    <description>Part of the remediation project to store different personas</description>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Affiliation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>