force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Campus_Interest_Secondary__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Campus_Interest_Secondary__c</fullName>
    <description>Candidate’s second campus interest</description>
    <label>Campus Interest - Secondary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>I_ST_Campus</valueSetName>
    </valueSet>
</CustomField>