force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Candidate_Has_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Candidate_Has_Supervisor__c</fullName>
    <description>Depicts whether the candidate has existing supervisor.</description>
    <label>Does the Candidate have a Supervisor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>