force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_DoNotMessage__c.field-meta.xml
<CustomField>
    <fullName>I_IL_DoNotMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Depicts if the affiliation is not to be contact via WhatsApp and/or WeChat and/or SMS.</description>
    <label>DoNotMessage</label>
    <type>Checkbox</type>
</CustomField>