force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_English_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>I_IL_English_Overall_Score__c</fullName>
    <description>Depicts candidate’s overall English overall score.</description>
    <label>English Test Overall Score</label>
    <length>20</length>
    <type>Text</type>
</CustomField>