force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_English_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>I_IL_English_Test_Type__c</fullName>
    <description>Depicts the test type for English test</description>
    <label>English Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_IL_Undertaken_English_Test__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IELTS (Academic)</fullName>
            </value>
            <value>
                <fullName>IELTS (UK Visa and Immigration)</fullName>
            </value>
            <value>
                <fullName>Pearson Test of English (Academic) (PTE)</fullName>
            </value>
            <value>
                <fullName>TOEFL Internet based (iBT)</fullName>
            </value>
            <value>
                <fullName>Cambridge Certificate of Advanced English (CAE)</fullName>
            </value>
            <value>
                <fullName>Cambridge Certificate of Proficiency in English (CPE)</fullName>
            </value>
            <value>
                <fullName>Duolingo</fullName>
            </value>
            <value>
                <fullName>Pearson&apos;s Versant test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>