force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Has_Research_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Has_Research_Proposal__c</fullName>
    <description>Depicts whether the candidate has existing research proposal</description>
    <label>Has Research Proposal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>