force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Heat_Status__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Heat_Status__c</fullName>
    <description>Used to indicate whether the international lead is hot/warm or cold. Used to hold the value from QSES - in future this will be replaced by Rank field.</description>
    <inlineHelpText>QSES status</inlineHelpText>
    <label>Heat Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>