force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Intend_study_English_in_Australia__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Intend_study_English_in_Australia__c</fullName>
    <description>Depicts whether candidate has enrolled or intend to enroll in an English language course in Australia.</description>
    <inlineHelpText>Only record if the language course is recognised by La Trobe University.</inlineHelpText>
    <label>Intend to study English in Australia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>