force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Intended_Commencement_Intake_Period__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Intended_Commencement_Intake_Period__c</fullName>
    <description>Intake period candidate intends to commence study</description>
    <label>Intended Commencement Intake Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semester 1</fullName>
            </value>
            <value>
                <fullName>Semester 2</fullName>
            </value>
            <value>
                <fullName>Term 2</fullName>
            </value>
            <value>
                <fullName>Term 3</fullName>
            </value>
            <value>
                <fullName>Term 4</fullName>
            </value>
            <value>
                <fullName>Term 5</fullName>
            </value>
            <value>
                <fullName>Term 6</fullName>
            </value>
            <value>
                <fullName>Summer 1</fullName>
            </value>
            <value>
                <fullName>Research period 1</fullName>
            </value>
            <value>
                <fullName>Research Period 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>