force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Intended_Commencement_Year__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Intended_Commencement_Year__c</fullName>
    <description>Year candidate intends to commence study</description>
    <label>Intended Commencement Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2018</fullName>
            </value>
            <value>
                <fullName>2019</fullName>
            </value>
            <value>
                <fullName>2020</fullName>
            </value>
            <value>
                <fullName>2021</fullName>
            </value>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>