force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Intended_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Intended_Funding_Source__c</fullName>
    <description>Depicts candidate’s education funding source</description>
    <label>Intended Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-funded</fullName>
            </value>
            <value>
                <fullName>Family-funded</fullName>
            </value>
            <value>
                <fullName>Coursework Scholarship</fullName>
            </value>
            <value>
                <fullName>Graduate Research Scholarship</fullName>
            </value>
            <value>
                <fullName>Graduate Research External Sponsorship</fullName>
            </value>
            <value>
                <fullName>Coursework External Sponsorship</fullName>
            </value>
            <value>
                <fullName>Bank Loan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Coursework External Scholarship</fullName>
                <isActive>false</isActive>
                <label>Coursework External Scholarship</label>
            </value>
            <value>
                <fullName>Graduate Research External Scholarship</fullName>
                <isActive>false</isActive>
                <label>Graduate Research External Scholarship</label>
            </value>
            <value>
                <fullName>Research External Scholarship/Sponsorship</fullName>
                <isActive>false</isActive>
                <label>Research External Scholarship/Sponsorship</label>
            </value>
            <value>
                <fullName>Scholarship</fullName>
                <isActive>false</isActive>
                <label>Scholarship</label>
            </value>
            <value>
                <fullName>Sponsored by University</fullName>
                <isActive>false</isActive>
                <label>Sponsored by University</label>
            </value>
            <value>
                <fullName>Sponsored by company or organisation</fullName>
                <isActive>false</isActive>
                <label>Sponsored by company or organisation</label>
            </value>
            <value>
                <fullName>Sponsored by government</fullName>
                <isActive>false</isActive>
                <label>Sponsored by government</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>