force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Intended_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Intended_Sponsor__c</fullName>
    <description>Depicts a candidate’s intended sponsor for education</description>
    <inlineHelpText>e.g. Ministry of Higher Education Saudi Arabia, Australia Awards, etc.</inlineHelpText>
    <label>Intended Sponsor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>