force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Met_English_Requirements__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Met_English_Requirements__c</fullName>
    <description>Depicts whether candidate has met English requirements.</description>
    <label>Has Candidate met English Requirements?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>