force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Nominee__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Nominee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LTU360-2095: Depicts a Candidate’s nominated contact/affiliation details</description>
    <label>Nominee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>I_RM_Affiliation__c.I_RM_Role__c</field>
            <operation>equals</operation>
            <value>Nominated Affiliation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>I_RM_Affiliation__c</referenceTo>
    <relationshipLabel>Nominated Affiliations</relationshipLabel>
    <relationshipName>NominatedAffiliations</relationshipName>
    <type>Lookup</type>
</CustomField>