force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Nominee_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Nominee_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LTU360-2095:  If this flag is ticked, all communication is sent to the email address that is on the Nominee’s Affiliation record.</description>
    <inlineHelpText>Tick the check box if a candidate has got a nominee. (Note: For leads over 18yrs, a consent is required from the lead).</inlineHelpText>
    <label>Nominee Flag</label>
    <type>Checkbox</type>
</CustomField>