force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Nominee_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Nominee_Personal_Email__c</fullName>
    <description>Retrieves Nominee&apos;s email address for use in send email quick action</description>
    <formula>I_IL_Nominee__r.I_RM_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nominee Personal Email</label>
    <type>Text</type>
</CustomField>