force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Nominee_Type__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Nominee_Type__c</fullName>
    <description>LTU360-2095: Relationship of Candidate’s nominated contact/affiliation</description>
    <label>Nominee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>