force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Pathway__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Pathway__c</fullName>
    <description>Depicts study pathway a candidate intend to undertake</description>
    <label>Pathway</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>I_IL_Pathway_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFL Sports Ready</fullName>
            </value>
            <value>
                <fullName>American Education Centre Ltd (ANC Education)</fullName>
            </value>
            <value>
                <fullName>Anhui International Studies University</fullName>
            </value>
            <value>
                <fullName>ASHE</fullName>
            </value>
            <value>
                <fullName>Australian College of Business and Technology</fullName>
            </value>
            <value>
                <fullName>Australian College of Business and Technology (ACBT)</fullName>
            </value>
            <value>
                <fullName>Australian Institute of Superannuation Trustees (AIST)</fullName>
            </value>
            <value>
                <fullName>Beijing Foreign Studies University</fullName>
            </value>
            <value>
                <fullName>Bendigo Kangan Institute</fullName>
            </value>
            <value>
                <fullName>Bendigo Kangan Institute of TAFE</fullName>
            </value>
            <value>
                <fullName>Box Hill Institute</fullName>
            </value>
            <value>
                <fullName>Chandigarh University</fullName>
            </value>
            <value>
                <fullName>Chengdu University of Information Technology</fullName>
            </value>
            <value>
                <fullName>Chengdu University of Information Technology (CUIT)</fullName>
            </value>
            <value>
                <fullName>Chisholm Institute</fullName>
            </value>
            <value>
                <fullName>Chisholm Institute of TAFE</fullName>
            </value>
            <value>
                <fullName>Chongqing University</fullName>
            </value>
            <value>
                <fullName>Chongqing University (CQU)</fullName>
            </value>
            <value>
                <fullName>Dalian Jiaotong University</fullName>
            </value>
            <value>
                <fullName>Davis College</fullName>
            </value>
            <value>
                <fullName>East China Normal University (ECNU)</fullName>
            </value>
            <value>
                <fullName>East China University of Science and Technology (ECUST)</fullName>
            </value>
            <value>
                <fullName>Goulburn Ovens Institute of TAFE</fullName>
            </value>
            <value>
                <fullName>Goulburn Ovens TAFE (GO TAFE)</fullName>
            </value>
            <value>
                <fullName>Guangdong University of Finance</fullName>
            </value>
            <value>
                <fullName>Guangzhou College of South China University of Technology</fullName>
            </value>
            <value>
                <fullName>Hanoi University of Science and Technology</fullName>
            </value>
            <value>
                <fullName>Hanoi University of Science and Technology (HUST)</fullName>
            </value>
            <value>
                <fullName>Health Information Management Association of Australia</fullName>
            </value>
            <value>
                <fullName>Institute of Chartered Accountants of Sri Lanka, The</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>