force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Pathway_Type__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Pathway_Type__c</fullName>
    <description>Depicts pathway type a candidate intends to undertake</description>
    <label>Pathway Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onshore Pathway</fullName>
            </value>
            <value>
                <fullName>Offshore Pathway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>