force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Prior_Research_Experience__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Prior_Research_Experience__c</fullName>
    <description>Depicts candidate’s prior research experience</description>
    <label>Prior Research Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No experience</fullName>
            </value>
            <value>
                <fullName>0 - 1 years</fullName>
            </value>
            <value>
                <fullName>2 - 5 years</fullName>
            </value>
            <value>
                <fullName>Above 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>