force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_QSES_Course_Preference__c.field-meta.xml
<CustomField>
    <fullName>I_IL_QSES_Course_Preference__c</fullName>
    <description>This is the course interest recorded by QSES on this lead record.</description>
    <inlineHelpText>This is the course interest recorded by QSES on this lead record.</inlineHelpText>
    <label>QSES Course Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>