force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Refused_Visa__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Refused_Visa__c</fullName>
    <description>Depicts Visa(s) refusal for any Country</description>
    <inlineHelpText>Has the candidate ever been refused a visa to Australia or another country.</inlineHelpText>
    <label>Refused Visa(s) For Any Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>