force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Sponsored__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Sponsored__c</fullName>
    <description>Depicts whether a candidate is sponsored</description>
    <label>Sponsored</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>