force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Undertaken_English_Test__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Undertaken_English_Test__c</fullName>
    <description>Depicts whether candidate has taken English test.</description>
    <inlineHelpText>Only tests approved by La Trobe University.</inlineHelpText>
    <label>Has Candidate undertaken English test?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>