force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Visa_Cond_Breaches__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Visa_Cond_Breaches__c</fullName>
    <description>Depicts Previous Visa Condition Breaches</description>
    <inlineHelpText>Has the candidate had any previous visa condition breaches, to Australia or any other country?</inlineHelpText>
    <label>Previous Visa Condition Breaches</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>