force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Work_Experience__c</fullName>
    <description>Candidate’s years of work experience</description>
    <label>Work Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No experience</fullName>
            </value>
            <value>
                <fullName>1 - 4 years</fullName>
            </value>
            <value>
                <fullName>5 - 7 years</fullName>
            </value>
            <value>
                <fullName>8-10 years</fullName>
            </value>
            <value>
                <fullName>Above 10 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>