force-app/main/default/objects/I_RM_Affiliation__c/fields/I_IL_Work_Experience_Industry__c.field-meta.xml
<CustomField>
    <fullName>I_IL_Work_Experience_Industry__c</fullName>
    <description>Candidate’s work experience industry</description>
    <inlineHelpText>Job title/ designation of candidate</inlineHelpText>
    <label>Work Experience Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Administration &amp; Office Support</fullName>
            </value>
            <value>
                <fullName>Advertising, Arts &amp; Media</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Financial Services</fullName>
            </value>
            <value>
                <fullName>Call Centre &amp; Customer Service</fullName>
            </value>
            <value>
                <fullName>CEO &amp; General Management</fullName>
            </value>
            <value>
                <fullName>Community Services &amp; Development</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Consulting &amp; Strategy</fullName>
            </value>
            <value>
                <fullName>Design &amp; Architecture</fullName>
            </value>
            <value>
                <fullName>Education &amp; Training</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Farming, Animals &amp; Conservation</fullName>
            </value>
            <value>
                <fullName>Government &amp; Defence</fullName>
            </value>
            <value>
                <fullName>Healthcare &amp; Medical</fullName>
            </value>
            <value>
                <fullName>Hospitality &amp; Tourism</fullName>
            </value>
            <value>
                <fullName>Human Resources &amp; Recruitment</fullName>
            </value>
            <value>
                <fullName>Information &amp; Communication Technology</fullName>
            </value>
            <value>
                <fullName>Insurance &amp; Superannuation</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Manufacturing, Transport &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Marketing &amp; Communications</fullName>
            </value>
            <value>
                <fullName>Mining, Resources &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Real Estate &amp; Property</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Consumer Products</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Science &amp; Technology</fullName>
            </value>
            <value>
                <fullName>Self-Employment</fullName>
            </value>
            <value>
                <fullName>Sport &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Trades &amp; Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>