force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Account__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to organisation</description>
    <label>Organisation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_RS_External_Organisation</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_RS_La_Trobe_Organisation_Unit</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>I_ST_Educational_Institution</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>