force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Active__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Active__c</fullName>
    <description>Used in matching rule to ensure inactive records aren&apos;t used in duplicate checks</description>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
                <default>true</default>
                <label>True</label>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>