force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Adjustment_Score__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Adjustment_Score__c</fullName>
    <description>Used for Contact scoring</description>
    <label>Adjustment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>