force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Admission_Centre__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Admission_Centre__c</fullName>
    <description>This field is used to identify the source system(s) of the applications. This id is not unique across all affiliation records</description>
    <label>Admission Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>