force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Admission_Centre_Application_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Admission_Centre_Application_Id__c</fullName>
    <externalId>true</externalId>
    <label>Admission Centre Application Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>