force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Affiliation_Age__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Affiliation_Age__c</fullName>
    <description>Technical Field: The age of an Affiliation (in days) based on its start date. For an active Affiliation, the age is based on today&apos;s date whereas for inactive one it&apos;s based on end date.</description>
    <formula>IF(
(I_RM_StartDate__c - BLANKVALUE(I_RM_EndDate__c, TODAY())) &gt; 0,
I_RM_StartDate__c - BLANKVALUE(I_RM_EndDate__c, TODAY()),
I_RM_StartDate__c - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affiliation Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>