force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Affiliation_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Affiliation_Contact_Name__c</fullName>
    <formula>I_RM_Contact__r.I_RS_Full_Name__c</formula>
    <label>Affiliation Contact Name</label>
    <type>Text</type>
</CustomField>