force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Applicant_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Applicant_Id__c</fullName>
    <description>Applicant Identifier</description>
    <label>Applicant Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>