force-app/main/default/objects/I_RM_Affiliation__c/fields/I_RM_Aspire_Flag__c.field-meta.xml
<CustomField>
    <fullName>I_RM_Aspire_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Depicts if the person is an Aspire contact at a Secondary School.</description>
    <inlineHelpText>Point of contact for Aspire program.</inlineHelpText>
    <label>Aspire Representative</label>
    <type>Checkbox</type>
</CustomField>